src/ChatApp.module.css
/* .scrollArea {
    width: 70%;
    display: flex;
    flex-direction: column;
    margin: 0 auto;
    gap: 20px;
    justify-content: center;
    
}

.message {
    display: flex;
    margin-right: auto;
    

}

.leftAuto {
    justify-self: flex-start;
}

.rightAuto {
    margin-right: 50px; /* Pushes the element to the right */

* {
  font-family: "Noto Sans", sans-serif;
}

.container {
  position: relative;
}

.left {
  justify-content: end;
}

.right {
  justify-content: start;
  /* max-width: 700px; */
}

.lessSize {
  width: 650px;
}

.searchContainer {
  position: relative;
  width: 70vw;
  margin: 0 auto;
}

.input {
  outline: none;
  border: none;
  width: 100%;
  border: 2px solid #ffe7e1;
  box-shadow: 0px 4px 4px 0px #00000040;
  text-wrap: wrap;
}

/* Custom scrollbar styling */
textarea::-webkit-scrollbar {
  width: 8px;
}

textarea::-webkit-scrollbar-track {
  border-radius: 10px;
}

textarea::-webkit-scrollbar-thumb {
  background-color: #6b7280;
  border-radius: 10px;
}

/* Transparent thumb background on hover, with a white outline */
textarea::-webkit-scrollbar-thumb:hover {
  background-color: transparent; /* Makes the thumb background invisible */
  border: 2px solid white; /* White border outline */
}

.notScrollable::-webkit-scrollbar {
  display: none !important;
}

.text {
  font-weight: 200;
  font-size: 18px;
  line-height: 24px;
}

.userPrompt {
  padding: 10px !important;
}

.searchButton {
  position: absolute;
  right: 50px;
  bottom: 35px;
}

.loading {
  display: flex;
  gap: 15px;
}

.textContainer {
  display: flex !important;
  align-items: center !important;
  justify-content: space-around !important;
}

.dots {
  display: flex;
  gap: 30px;
  align-items: center;
  margin-bottom: -10px;
}

.dot {
  width: 8px;
  height: 8px;
  border-radius: 50%;
  background-color: white;
  opacity: 0;
  animation: dot-blink 2.5s infinite;
}

.dot:nth-child(1) {
  animation-delay: 0s;
}

.dot:nth-child(2) {
  animation-delay: 0.3s;
}

.dot:nth-child(3) {
  animation-delay: 0.6s;
}

@keyframes dot-blink {
  0%,
  100% {
    opacity: 0;
  }
  50% {
    opacity: 1;
  }
}

.talk {
  position: absolute;
  top: 0;
  width: 100vw;
  height: 100vh;
  display: flex;
  justify-content: center;
  align-items: center;
  font-weight: 400;
  line-height: 85px;
  font-size: 62px;
}

